refactor Util lib; add crypto to client

--- a/Framework/CMakeLists.txt
+++ b/Framework/CMakeLists.txt
@@ -1,5 +1,3 @@
-find_package(OpenCV REQUIRED)
-
 # flags
 set(COMMON_FLAGS "-pthread -g -O0 -fPIC -Wall -Wno-unused-function -Wno-unused-variable -Wno-sign-compare")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${COMMON_FLAGS}")
@@ -7,22 +5,18 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMMON_FLAGS}")
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 11)
 
-# lib common
-file(GLOB SOURCES src/Common/*.cpp)
-add_library(Common ${SOURCES})
+# lib util
+set(LIBUTIL_DIR ${FRAMEWORK_DIR}/src/Util)
+set(LIBUTIL_INCLUDE_DIR ${FRAMEWORK_DIR}/src/Util)
+add_subdirectory(${LIBUTIL_DIR})
 
 # uee module
-file(GLOB SERVER_SOURCES src/Uee/*.cpp)
-add_executable(Uee ${SERVER_SOURCES})
-target_include_directories(Uee PUBLIC src/Common src/Uee)
-target_link_libraries(Uee Common)
+set(SERVER_DIR ${FRAMEWORK_DIR}/src/Uee)
+add_subdirectory(${SERVER_DIR})
 
-# client module
-file(GLOB SERVER_SOURCES src/Client/*.cpp)
-add_executable(Client ${SERVER_SOURCES} src/Client/Client.cpp src/Client/Client.h)
-target_include_directories(Client PUBLIC src/Common ${OpenCV_INCLUDE_DIRS})
-target_link_libraries(Client Common ${OpenCV_LIBS})
-
+# compile client module
+set(CLIENT_DIR ${FRAMEWORK_DIR}/src/Client)
+add_subdirectory(${CLIENT_DIR})
 
 ######################################################### SGX #########################################################
 # define common sgx vars
@@ -40,7 +34,6 @@ set(SGX_ENCLAVE_SIGNER ${SGX_SDK}/bin/x64/sgx_sign)
 # dirs
 set(IEE_COMM_DIR ${FRAMEWORK_DIR}/src/IeeComm)
 set(IEE_DIR ${FRAMEWORK_DIR}/src/Iee)
-set(COMMON_DIR ${FRAMEWORK_DIR}/src/Common)
 
 # filenames for enclave
 set(ENCLAVE_NAME enclave.so)
