clear server on iee clear

--- a/Framework/src/Uee/CMakeLists.txt
+++ b/Framework/src/Uee/CMakeLists.txt
@@ -1,11 +1,13 @@
 list(APPEND CMAKE_MODULE_PATH ${SERVER_DIR})
 find_package(TBB REQUIRED)
 
-set(CMAKE_C_FLAGS "-pthread -g -O0 -fPIC -Wall")
-set(CMAKE_CXX_FLAGS "-pthread -g -O0 -fPIC -Wall")
+#set(DEBUG_FLAGS "-g -O0")
+
+set(CMAKE_C_FLAGS "-pthread ${DEBUG_FLAGS} -fPIC -Wall")
+set(CMAKE_CXX_FLAGS "-pthread ${DEBUG_FLAGS} -fPIC -Wall")
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(Uee ${SERVER_DIR}/SseServer.cpp)
+add_executable(Uee ${SERVER_DIR}/Server.cpp)
 target_include_directories(Uee PRIVATE ${FRAMEWORK_INCLUDE_DIR} ${SERVER_DIR})
 target_link_libraries(Uee Util tbb)
