add untrusted crypto lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
 project(sgx_image_search)
 
-set(SIMULATED_MODE 0)
+#set(SIMULATED_MODE 0)
 
 # base paths
 set(FRAMEWORK_DIR ${CMAKE_SOURCE_DIR}/Framework)
@@ -15,6 +15,9 @@ set(EXTERN_LIB_NAME ImageSearch)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR})
+
+# pass vars to program
+#add_definitions(-DSIMULATED_MODE=${SIMULATED_MODE})
 
 # include dirs
 set(FRAMEWORK_INCLUDE_DIR ${FRAMEWORK_DIR}/include)
