fix for sodium include path

--- a/Framework/src/Iee/CMakeLists.txt
+++ b/Framework/src/Iee/CMakeLists.txt
@@ -21,7 +21,7 @@ add_executable(${ENCLAVE_NAME} ${IEE_DIR}/Enclave_t.c ${IEE_DIR}/Enclave.cpp ${I
 add_dependencies(${ENCLAVE_NAME} edger8r_trusted)
 
 # includes and linking
-target_include_directories(${ENCLAVE_NAME} PRIVATE ${FRAMEWORK_INCLUDE_DIR} ${EXTERN_INCLUDE_DIR} ${MBEDTLS_DIR}/include ${IEE_DIR} ${IEE_DIR}/ocall_wrappers ${IEE_DIR}/threading ${SGX_INCLUDE_PATHS})
+target_include_directories(${ENCLAVE_NAME} PRIVATE ${FRAMEWORK_INCLUDE_DIR} /usr/local/include ${EXTERN_INCLUDE_DIR} ${MBEDTLS_DIR}/include ${IEE_DIR} ${IEE_DIR}/ocall_wrappers ${IEE_DIR}/threading ${SGX_INCLUDE_PATHS})
 
 # To generate a proper enclave, it is recommended to follow below guideline to link the trusted libraries:
 #    1. Link sgx_trts with the `--whole-archive' and `--no-whole-archive' options,
