--- a/Framework/src/LibTrusted/CMakeLists.txt
+++ b/Framework/src/LibTrusted/CMakeLists.txt
@@ -4,6 +4,6 @@ set(CMAKE_CXX_FLAGS ${sgx_cpp_flags})
 
 add_library(${LIB_TRUSTED} ${LIB_TRUSTED_DIR}/trusted_crypto.cpp ${LIB_TRUSTED_DIR}/trusted_util.cpp ${LIB_TRUSTED_DIR}/outside_util.cpp)
 add_dependencies(${LIB_TRUSTED} edger8r_trusted)
-
-target_include_directories(${LIB_TRUSTED} PRIVATE ${FRAMEWORK_INCLUDE_DIR} ${MBEDTLS_DIR}/include ${SGX_INCLUDE_PATHS} ${IEE_DIR}) # ${IEE_DIR} for enclave_t
+message(${MBEDTLS_DIR}/include)
+target_include_directories(${LIB_TRUSTED} PRIVATE ${FRAMEWORK_INCLUDE_DIR} /usr/local/include ${MBEDTLS_DIR}/include ${SGX_INCLUDE_PATHS} ${IEE_DIR}) # ${IEE_DIR} for enclave_t
 target_link_libraries(${LIB_TRUSTED} sodium-sgx)
