integrated multi threaded mbedtls server into App.cpp

--- a/Framework/src/IeeComm/CMakeLists.txt
+++ b/Framework/src/IeeComm/CMakeLists.txt
@@ -16,7 +16,7 @@ link_directories(${SGX_LIBRARY_PATH} ${MBEDTLS_DIR}/lib)
 #find_library(UAE_SERVICE sgx_uae_service PATHS /usr/lib NO_CMAKE_FIND_ROOT_PATH)
 
 add_executable(IeeComm
-        ${IEE_COMM_DIR}/App.cpp ${IEE_COMM_DIR}/server.cpp ${IEE_COMM_DIR}/Enclave_u.c
+        ${IEE_COMM_DIR}/App.cpp ${IEE_COMM_DIR}/Enclave_u.c
         ${IEE_COMM_DIR}/ocall/ocall.cpp
         ${IEE_COMM_DIR}/sgx_handler/sgx_handler.cpp
         ${IEE_COMM_DIR}/threading/thread_pool.cpp
