--- a/Framework/src/Iee/CMakeLists.txt
+++ b/Framework/src/Iee/CMakeLists.txt
@@ -10,12 +10,12 @@ set(CMAKE_CXX_FLAGS ${sgx_cpp_flags})
 
 add_custom_command(
     OUTPUT ${IEE_DIR}/Enclave_t.h ${IEE_DIR}/Enclave_t.c
-    COMMAND ${SGX_EDGER8R} --trusted-dir ${IEE_DIR} --trusted ${IEE_DIR}/Enclave.edl --search-path ${IEE_DIR} --search-path ${FRAMEWORK_INCLUDE_DIR} --search-path ${MBEDTLS_DIR}/lib --search-path ${SGX_SDK}/include
+    COMMAND ${SGX_EDGER8R} --trusted-dir ${IEE_DIR} --trusted ${IEE_DIR}/Enclave.edl --search-path ${IEE_DIR} --search-path ${FRAMEWORK_INCLUDE_DIR} --search-path ${MBEDTLS_SGX_DIR}/lib --search-path ${SGX_SDK}/include
     DEPENDS ${IEE_DIR}/Enclave.edl
 )
 add_custom_target(edger8r_trusted ALL DEPENDS ${IEE_DIR}/Enclave_t.h ${IEE_DIR}/Enclave_t.c)
 
-link_directories(${SGX_LIBRARY_PATH} ${MBEDTLS_DIR}/lib)
+link_directories(${SGX_LIBRARY_PATH} ${MBEDTLS_SGX_DIR}/lib)
 
 add_executable(${ENCLAVE_NAME}
         ${IEE_DIR}/Enclave_t.c ${IEE_DIR}/Enclave.cpp ${IEE_DIR}/thread_handler.cpp
@@ -23,7 +23,7 @@ add_executable(${ENCLAVE_NAME}
 add_dependencies(${ENCLAVE_NAME} edger8r_trusted)
 
 # includes and linking
-target_include_directories(${ENCLAVE_NAME} PRIVATE ${FRAMEWORK_INCLUDE_DIR} /usr/local/include ${EXTERN_INCLUDE_DIR} ${MBEDTLS_DIR}/include ${IEE_DIR} ${IEE_DIR}/ocall_wrappers ${IEE_DIR}/threading ${SGX_INCLUDE_PATHS})
+target_include_directories(${ENCLAVE_NAME} PRIVATE ${FRAMEWORK_INCLUDE_DIR} /usr/local/include ${EXTERN_INCLUDE_DIR} ${MBEDTLS_SGX_DIR}/include ${IEE_DIR} ${IEE_DIR}/ocall_wrappers ${IEE_DIR}/threading ${SGX_INCLUDE_PATHS})
 
 # To generate a proper enclave, it is recommended to follow below guideline to link the trusted libraries:
 #    1. Link sgx_trts with the `--whole-archive' and `--no-whole-archive' options,
