--- a/ImageSearch/CMakeLists.txt
+++ b/ImageSearch/CMakeLists.txt
@@ -21,9 +21,14 @@ set(CMAKE_CXX_STANDARD 11)
 # define target library
 set(KMEANS_SRCS ${EXTERN_DIR}/src/seq-kmeans/util.cpp ${EXTERN_DIR}/src/seq-kmeans/kmeans.cpp ${EXTERN_DIR}/src/seq-kmeans/bagofwords.cpp)
 set(UTIL_SRCS ${EXTERN_DIR}/src/parallel.cpp ${EXTERN_DIR}/src/scoring.cpp ${EXTERN_DIR}/src/img_processing.cpp ${EXTERN_DIR}/src/util.cpp)
-set(SOURCES ${EXTERN_DIR}/src/trusted.cpp ${EXTERN_DIR}/src/untrusted.cpp ${EXTERN_DIR}/src/training.cpp ${EXTERN_DIR}/src/repository.cpp ${UTIL_SRCS} ${KMEANS_SRCS})
 
-add_library(${EXTERN_LIB_NAME} ${SOURCES})
+add_library(${EXTERN_LIB_NAME}
+        ${EXTERN_DIR}/src/trusted.cpp
+        ${EXTERN_DIR}/src/untrusted.cpp
+        ${EXTERN_DIR}/src/training.cpp
+        ${EXTERN_DIR}/src/repository.cpp
+        ${UTIL_SRCS} ${KMEANS_SRCS})
+
 target_link_libraries(${EXTERN_LIB_NAME})
 
 if (SIMULATED_MODE)
