--- a/ImageSearch/CMakeLists.txt
+++ b/ImageSearch/CMakeLists.txt
@@ -18,21 +18,26 @@ endif ()
 
 set(CMAKE_CXX_STANDARD 11)
 
-# define target library
-set(KMEANS_SRCS ${EXTERN_DIR}/src/seq-kmeans/util.cpp ${EXTERN_DIR}/src/seq-kmeans/kmeans.cpp ${EXTERN_DIR}/src/seq-kmeans/bagofwords.cpp)
+set(KMEANS_DIR ${EXTERN_DIR}/src/training/seq-kmeans)
+
+# sources
+set(KMEANS_SRCS ${KMEANS_DIR}/kmeans.cpp)
 set(UTIL_SRCS ${EXTERN_DIR}/src/parallel.cpp ${EXTERN_DIR}/src/scoring.cpp ${EXTERN_DIR}/src/img_processing.cpp ${EXTERN_DIR}/src/util.cpp)
 
+# define target library
 add_library(${EXTERN_LIB_NAME}
         ${EXTERN_DIR}/src/trusted.cpp
         ${EXTERN_DIR}/src/untrusted.cpp
         ${EXTERN_DIR}/src/training.cpp
         ${EXTERN_DIR}/src/repository.cpp
+        ${EXTERN_DIR}/src/training/bagofwords.cpp
+        ${EXTERN_DIR}/src/training/util.cpp
         ${UTIL_SRCS} ${KMEANS_SRCS})
 
 target_link_libraries(${EXTERN_LIB_NAME})
 
 if (SIMULATED_MODE)
-    target_include_directories(${EXTERN_LIB_NAME} PRIVATE ${EXTERN_DIR} ${FRAMEWORK_INCLUDE_DIR})
+    target_include_directories(${EXTERN_LIB_NAME} PRIVATE ${EXTERN_DIR} ${EXTERN_DIR}/src ${KMEANS_DIR} ${FRAMEWORK_INCLUDE_DIR})
 else()
-    target_include_directories(${EXTERN_LIB_NAME} PRIVATE ${EXTERN_DIR} ${FRAMEWORK_INCLUDE_DIR} ${SGX_INCLUDE_PATHS})
+    target_include_directories(${EXTERN_LIB_NAME} PRIVATE ${EXTERN_DIR} ${EXTERN_DIR}/src ${KMEANS_DIR} ${FRAMEWORK_INCLUDE_DIR} ${SGX_INCLUDE_PATHS})
 endif ()
