--- a/Framework/src/Client/CMakeLists.txt
+++ b/Framework/src/Client/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_package(OpenCV REQUIRED)
 find_package(OpenSSL REQUIRED)
 
-set(CMAKE_C_FLAGS "-pthread -g -O0 -fPIC -Wno-unused-variable -Wall")
+set(CMAKE_C_FLAGS "-pthread -g -O0 -fPIC -Wno-unused-variable -Wall -Wno-unused-function")
 set(CMAKE_CXX_FLAGS "-pthread -g -O0 -fPIC -Wno-unused-variable -Wall")
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 11)
@@ -10,4 +10,4 @@ link_directories(${MBEDTLS_DIR}/build/library)
 
 add_executable(Client ${CLIENT_DIR}/Client.cpp ${CLIENT_DIR}/ImageSearch.cpp ${CLIENT_DIR}/client_training.cpp ${CLIENT_DIR}/rbisen/ClientCrypt.c ${CLIENT_DIR}/rbisen/Utils.c ${CLIENT_DIR}/rbisen/SseClient.cpp ${CLIENT_DIR}/rbisen/EnglishAnalyzer.cpp ${CLIENT_DIR}/rbisen/PorterStemmer.c ${CLIENT_DIR}/rbisen/QueryParser.cpp)
 target_include_directories(Client PRIVATE ${CLIENT_DIR} ${FRAMEWORK_INCLUDE_DIR} ${OpenCV_INCLUDE_DIRS} ${OPENSSL_INCLUDE_DIR} ${MBEDTLS_DIR}/include ${CLIENT_DIR}/rbisen)
-target_link_libraries(Client ${LIB_UNTRUSTED} ${LIB_UNTRUSTED_TLS} ${OpenCV_LIBS} ${OPENSSL_CRYPTO_LIBRARY} mbedcrypto mbedtls mbedx509)
+target_link_libraries(Client ${LIB_UNTRUSTED} ${LIB_UNTRUSTED_TLS} ${OpenCV_LIBS} ${OPENSSL_CRYPTO_LIBRARY} mbedcrypto mbedtls mbedx509 config)
