queries in config

--- a/isen.cfg
+++ b/isen.cfg
@@ -4,6 +4,7 @@ use_images = 0
 
 bisen = {
     nr_docs = 10000;
+    queries = ("portugal", "portugal", "!portugal", "time", "post", "new && zealand && wine");
 };
 
 visen = {
