refactor visen test

--- a/isen.cfg
+++ b/isen.cfg
@@ -4,16 +4,16 @@ use_images = 0
 
 bisen = {
     nr_docs = 10000;
-    queries = ("portugal", "portugal", "!portugal", "time", "post", "new && zealand && wine");
+    queries = ("portugal", "!portugal", "file", "ola");
 };
 
 visen = {
-    train_technique = "client_kmeans";
-    train_mode = "train";
-    //train_mode = "load";
+    train_technique = "iee_kmeans";
+    //train_mode = "train";
+    train_mode = "load";
     search_mode = "inria";
 
     descriptor_threshold = 500;
-    nr_clusters = 5000;
+    nr_clusters = 1000;
     clusters_file = "centroids5000";
 };
