--- a/isen.cfg
+++ b/isen.cfg
@@ -4,7 +4,8 @@ use_images = 0
 
 bisen = {
     nr_docs = 10000;
-    queries = ("portugal", "!portugal", "file", "ola");
+    queries = ("!portugal", "portugal", "portugal", "file", "ola");
+    doc_type = "normal";
 };
 
 visen = {
