--- a/isen.cfg
+++ b/isen.cfg
@@ -3,9 +3,9 @@ use_text = 1
 use_images = 0
 
 bisen = {
-    nr_docs = 10000;
-    queries = ("!portugal", "portugal", "portugal", "file", "ola");
-    doc_type = "normal";
+    nr_docs = 5000;
+    queries = ("portugal");
+    doc_type = "wiki";
 };
 
 visen = {
