--- a/isen.cfg
+++ b/isen.cfg
@@ -1,10 +1,11 @@
 // generic
 use_text = 1
 use_images = 0
+use_multimodal = 1
 
 bisen = {
-    nr_docs = 5000;
-    queries = ("portugal");
+    nr_docs = 10000;
+    queries = ("country", "portugal", "country && portugal", "!portugal && country", "!country && portugal", "!country && !portugal");
     doc_type = "wiki";
 };
 
