--- a/isen.cfg
+++ b/isen.cfg
@@ -1,21 +1,23 @@
 // generic
-use_text = 1
-use_images = 0
-use_multimodal = 1
+use_text = 0
+use_images = 1
+use_multimodal = 0
 
 bisen = {
     nr_docs = 10000;
     queries = ("country", "portugal", "country && portugal", "!portugal && country", "!country && portugal", "!country && !portugal");
     doc_type = "wiki";
+    dataset_dir = "/home/guilherme/Datasets/wikipedia-parsed/";
 };
 
 visen = {
-    train_technique = "iee_kmeans";
-    //train_mode = "train";
-    train_mode = "load";
+    train_technique = "client_kmeans"; // client_kmeans or iee_kmeans
+    train_mode = "load"; // train or load
+    add_mode = "normal"; // normal or load
     search_mode = "inria";
 
     descriptor_threshold = 500;
-    nr_clusters = 1000;
+    nr_clusters = 5000;
     clusters_file = "centroids5000";
+    dataset_dir = "/home/guilherme/Datasets/inria/";
 };
