--- a/isen.cfg
+++ b/isen.cfg
@@ -1,12 +1,12 @@
 // generic
 use_text = 0
 use_images = 1
-use_multimodal = 0
+use_multimodal = 1
 
 bisen = {
     nr_docs = 10000;
     queries = ("country", "portugal", "country && portugal", "!portugal && country", "!country && portugal", "!country && !portugal");
-    doc_type = "wiki";
+    doc_type = "normal";
     dataset_dir = "/home/guilherme/Datasets/wikipedia-parsed/";
 };
 
@@ -18,6 +18,6 @@ visen = {
 
     descriptor_threshold = 500;
     nr_clusters = 5000;
-    clusters_file = "centroids5000";
+    clusters_file = "centroidsbak/centroids5000";
     dataset_dir = "/home/guilherme/Datasets/inria/";
 };
