tidy path generation

--- a/isen.cfg
+++ b/isen.cfg
@@ -1,12 +1,12 @@
 // generic
 use_text = 0
 use_images = 1
-use_multimodal = 1
+use_multimodal = 0
 
 bisen = {
-    nr_docs = 10000;
+    nr_docs = 1000;
     queries = ("country", "portugal", "country && portugal", "!portugal && country", "!country && portugal", "!country && !portugal");
-    doc_type = "normal";
+    doc_type = "wiki";
     dataset_dir = "/home/guilherme/Datasets/wikipedia-parsed/";
 };
 
@@ -20,4 +20,11 @@ visen = {
     nr_clusters = 5000;
     clusters_file = "centroidsbak/centroids5000";
     dataset_dir = "/home/guilherme/Datasets/inria/";
+};
+
+misen = {
+    text_dir = "/home/guilherme/Datasets/mirflickr/meta/tags/";
+    img_dir = "/home/guilherme/Datasets/mirflickr/";
+    nr_docs = 10;
+    nr_queries = 5;
 };
