fixed sim framework bug

--- a/isen.cfg
+++ b/isen.cfg
@@ -11,6 +11,7 @@ bisen = {
 };
 
 visen = {
+    nr_docs = 0;
     train_technique = "client_kmeans"; // client_kmeans or iee_kmeans
     train_mode = "load"; // train or load
     add_mode = "normal"; // normal or load
