--- a/isen.cfg
+++ b/isen.cfg
@@ -5,19 +5,22 @@ use_multimodal = 0
 
 bisen = {
     nr_docs = 100000;
+
     queries = (
+        "!time && person && year && way && day && thing && man && world && life && hand",
+        "!time && !person && !year && !way && !day && thing && man && world && life && hand",
+        "!time && !person && !year && !way && !day && !thing && !man && !world && !life && !hand",
+        "!(time && person && year && way && day && thing && man && world && life && hand)",
+
         "time", "person", "year", "way", "day", "thing", "man", "world", "life", "hand", "part", "child",
         "history", "country", "born", "lisbon", "york", "paris",
 
         "time && person", "time && person && year && way && day", "time && person && year && way && day && thing && man && world && life && hand",
         "time || person", "time || person || year || way || day", "time || person || year || way || day || thing || man || world || life || hand",
 
-        "!time && person && year && way && day && thing && man && world && life && hand", "!time && !person && !year && !way && !day && thing && man && world && life && hand", "!time && !person && !year && !way && !day && !thing && !man && !world && !life && !hand", "!(time && person && year && way && day && thing && man && world && life && hand)",
-
         "(time && person) || (year && way)", "(time && person) || (year && way) || (day && thing) || (man && world)", "(time && person) || (year && way) || (day && thing) || (man && world) || (life && hand) || (part && child)",
         "(time || person) && (year || way)", "(time || person) && (year || way) && (day || thing) && (man || world)", "(time || person) && (year || way) && (day || thing) && (man || world) && (life || hand) && (part || child)"
     );
-
     doc_type = "wiki";
     dataset_dir = "/home/guilherme/Datasets/wikipedia-parsed/";
 };
@@ -41,3 +44,29 @@ misen = {
     nr_docs = 10;
     nr_queries = 5;
 };
+
+/*
+    queries = ("time", "person", "year", "way", "day", "thing", "man", "world", "life", "hand", "part", "child");
+    queries = ("history", "country", "born", "lisbon", "york", "paris");
+
+    queries = (
+        "time && person",
+        "time && person && year && way && day",
+        "time && person && year && way && day && thing && man && world && life && hand",
+        "time || person",
+        "time || person || year || way || day",
+        "time || person || year || way || day || thing || man || world || life || hand"
+    );
+
+    queries = (
+        "!time && person && year && way && day && thing && man && world && life && hand",
+        "!time && !person && !year && !way && !day && thing && man && world && life && hand",
+        "!time && !person && !year && !way && !day && !thing && !man && !world && !life && !hand",
+        "!(time && person && year && way && day && thing && man && world && life && hand)"
+    );
+
+    queries = (
+        "(time && person) || (year && way)", "(time && person) || (year && way) || (day && thing) || (man && world)", "(time && person) || (year && way) || (day && thing) || (man && world) || (life && hand) || (part && child)",
+        "(time || person) && (year || way)", "(time || person) && (year || way) && (day || thing) && (man || world)", "(time || person) && (year || way) && (day || thing) && (man || world) && (life || hand) && (part || child)"
+    );
+*/
