--- a/isen.cfg
+++ b/isen.cfg
@@ -1,17 +1,12 @@
 // generic
-use_text = 1
-use_images = 0
+use_text = 0
+use_images = 1
 use_multimodal = 0
 
 bisen = {
-    nr_docs = 100000;
+    nr_docs = 1000000;
 
     queries = (
-        "!time && person && year && way && day && thing && man && world && life && hand",
-        "!time && !person && !year && !way && !day && thing && man && world && life && hand",
-        "!time && !person && !year && !way && !day && !thing && !man && !world && !life && !hand",
-        "!(time && person && year && way && day && thing && man && world && life && hand)",
-
         "time", "person", "year", "way", "day", "thing", "man", "world", "life", "hand", "part", "child",
         "history", "country", "born", "lisbon", "york", "paris",
 
@@ -19,14 +14,19 @@ bisen = {
         "time || person", "time || person || year || way || day", "time || person || year || way || day || thing || man || world || life || hand",
 
         "(time && person) || (year && way)", "(time && person) || (year && way) || (day && thing) || (man && world)", "(time && person) || (year && way) || (day && thing) || (man && world) || (life && hand) || (part && child)",
-        "(time || person) && (year || way)", "(time || person) && (year || way) && (day || thing) && (man || world)", "(time || person) && (year || way) && (day || thing) && (man || world) && (life || hand) && (part || child)"
+        "(time || person) && (year || way)", "(time || person) && (year || way) && (day || thing) && (man || world)", "(time || person) && (year || way) && (day || thing) && (man || world) && (life || hand) && (part || child)",
+
+        "!time && person && year && way && day && thing && man && world && life && hand",
+        "!time && !person && !year && !way && !day && thing && man && world && life && hand",
+        "!time && !person && !year && !way && !day && !thing && !man && !world && !life && !hand",
+        "!(time && person && year && way && day && thing && man && world && life && hand)"
     );
     doc_type = "wiki";
     dataset_dir = "/home/guilherme/Datasets/wikipedia-parsed/";
 };
 
 visen = {
-    nr_docs = 50;
+    nr_docs = 1491;
     train_technique = "client_kmeans"; // client_kmeans or iee_kmeans
     train_mode = "load"; // train or load
     add_mode = "normal"; // normal or load
